--- a/ContractorApi/ContractorApi/appsettings.json
+++ b/ContractorApi/ContractorApi/appsettings.json
@@ -8,6 +8,10 @@
   },
   "AllowedHosts": "*",
   "LiteDbOptions": {
-    "DatabaseLocation": "LiteDb/ContractorLiteDb.db"
+    "DatabaseLocation": "LiteDb/ContractorLiteDb.db",
+  },
+  "DadataOptions": {
+    "Url": "https://suggestions.dadata.ru/suggestions/api/4_1/rs/suggest/party",
+    "ApiKey": "0d5a072ea1b0378bd05b7dedcb59dfc526ba54fa"
   }
 }
