--- a/ContractorApi/ContractorApiClient/appsettings.json
+++ b/ContractorApi/ContractorApiClient/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ContractorApiOptions": {
+    "Url": "https://localhost:44330/api/contractors"
+  }
 }
